// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense List with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Transactions
    </div>
    <div
      className="show-for-desktop"
    >
      Transactions
    </div>
    <div
      className="show-for-desktop"
    >
      Card
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      card=""
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={345000}
      card=""
      createdAt={-5270400000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={80000}
      card=""
      createdAt={2678400000}
      description="Rent Oswego"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render Expense List with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Transactions
    </div>
    <div
      className="show-for-desktop"
    >
      Transactions
    </div>
    <div
      className="show-for-desktop"
    >
      Card
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses to show
      </span>
    </div>
  </div>
</div>
`;
